--- a/package.json
+++ b/package.json
@@ -7,20 +7,17 @@
     "test": "jest",
     "prestart": "rimraf dist",
     "prebuild": "rimraf dist",
-    "start:devserver": "cross-env NODE_ENV=development TARGET=client webpack serve --config webpack.config.js --mode development --inline --hot",
-    "start:sls": "yarn start:sls:dev",
-    "start:sls:dev-offline": "cross-env NODE_ENV=development IS_LOCAL=TRUE NODE_CONFIG_ENV=development-local yarn cleanup && yarn build:style-typings && concurrently -r --kill-others \"yarn start:devserver\" \"webpack --config ./webpack/serverless/index.js --watch\" \"sls offline start --noPrependStageInUrl --stage=local-development\"",
-    "start:sls:prod-offline": "cross-env NODE_ENV=development IS_LOCAL=TRUE NODE_CONFIG_ENV=development-local yarn cleanup && yarn build:style-typings && yarn build:sls:prod && concurrently -r --kill-others \"yarn start:http\" \"yarn \"",
-    "start:sls:dev": "cross-env NODE_ENV=development IS_LOCAL=TRUE NODE_CONFIG_ENV=development yarn cleanup && yarn build:style-typings && concurrently -r --kill-others \"yarn start:devserver\" \"webpack --config ./webpack/serverless/index.js --watch\" \"sls offline start --noPrependStageInUrl --stage=development\"",
-    "start:sls:prod": "cross-env NODE_ENV=development IS_LOCAL=TRUE NODE_CONFIG_ENV=development yarn cleanup && yarn build:style-typings && yarn build:sls:prod && concurrently -r --kill-others \"yarn start:http\" \"yarn \"",
-    "start:http": "http-server ./dist -p 9000",
+    "devserver": "cross-env NODE_ENV=development TARGET=client webpack serve --config webpack.config.js --mode development --inline --hot",
+    "prodserver": "cross-env NODE_ENV=production TARGET=client webpack serve --config webpack.config.js --mode production",
+    "dev": "NODE_ENV=development IS_LOCAL=TRUE NODE_CONFIG_ENV=development-local yarn cleanup && yarn build:style-typings && concurrently -r --kill-others \"yarn devserver\" \"webpack --config ./webpack/serverless/index.js --watch\" \"sls offline start --noPrependStageInUrl --stage=local-development\"",
+    "prod": "NODE_ENV=production IS_LOCAL=TRUE NODE_CONFIG_ENV=production-local yarn cleanup && yarn build:style-typings && concurrently -r --kill-others \"yarn build:prod\" \"yarn prodserver\" \"webpack --config ./webpack/serverless/index.js --watch\" \"sls offline start --noPrependStageInUrl --stage=local-production\"",
     "build:client:dev": "yarn cleanup && cross-env NODE_ENV=development TARGET=client webpack",
     "build:client:prod": "yarn cleanup && cross-env NODE_ENV=production TARGET=client webpack",
-    "build:sls:dev": "yarn cleanup && cross-env NODE_ENV=development yarn build:client:dev && TARGET=serverless webpack",
-    "build:sls:prod": "yarn cleanup && cross-env NODE_ENV=production yarn build:client:prod && TARGET=serverless webpack",
-    "deploy:sls:development": "yarn build:sls:dev && serverless deploy -v --stage development",
-    "deploy:sls:staging": "yarn build:sls:prod && serverless deploy -v --stage staging",
-    "deploy:sls:production": "yarn build:sls:prod && serverless deploy -v --stage production",
+    "build:dev": "yarn cleanup && cross-env NODE_ENV=development yarn build:client:dev && TARGET=serverless webpack",
+    "build:prod": "yarn cleanup && cross-env NODE_ENV=production yarn build:client:prod && TARGET=serverless webpack",
+    "deploy:dev": "yarn build:dev && serverless deploy -v --stage development",
+    "deploy:staging": "yarn build:prod && serverless deploy -v --stage staging",
+    "deploy:prod": "yarn build:prod && serverless deploy -v --stage production",
     "test:types": "tsc --noEmit",
     "hook:before:offline:start": "yarn build:client:prod",
     "build:style-typings": "node webpack/style-typings.js",
@@ -119,7 +116,9 @@
     "serverless-deployment-bucket": "^1.3.0",
     "serverless-domain-manager": "^3.3.0",
     "serverless-dynamodb-local": "^0.2.38",
+    "serverless-functions-base-path": "^1.0.32",
     "serverless-offline": "^5.12.1",
+    "serverless-offline-plus-static": "^1.0.4",
     "serverless-offline-scheduler": "^0.3.8",
     "serverless-offline-sns": "^0.68.0",
     "serverless-plugin-git-variables": "^4.0.0",
@@ -139,22 +138,24 @@
     "tslint": "^5.17.0",
     "tslint-react": "^4.0.0",
     "typescript": "^3.5.1",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.4",
-    "webpack-dev-middleware": "^3.7.0",
+    "webpack": "^4.44.2",
+    "webpack-cli": "^4.2.0",
+    "webpack-dev-middleware": "^4.0.2",
+    "webpack-dev-server": "^3.11.0",
     "webpack-hot-middleware": "^2.25.0",
     "webpack-manifest-plugin": "^2.0.4",
-    "webpack-merge": "^4.2.1",
+    "webpack-merge": "^4.2.2",
     "webpack-node-externals": "^1.7.2",
     "webpackbar": "^3.2.0",
-    "workbox-webpack-plugin": "^4.3.1",
-    "serverless-functions-base-path": "^1.0.32",
-    "serverless-offline-plus-static": "^1.0.4"
+    "workbox-webpack-plugin": "^4.3.1"
   },
   "dependencies": {
     "@babel/runtime": "^7.12.5",
+    "aws-serverless-express": "^3.4.0",
+    "babel-polyfill": "^6.26.0",
     "before-build-webpack": "^0.2.9",
     "classnames": "^2.2.6",
+    "concurrently": "^5.3.0",
     "connected-react-router": "^6.7.0",
     "core-js": "^3.6.4",
     "enzyme": "^3.11.0",
@@ -176,6 +177,7 @@
     "react-dom": "^16.13.0",
     "react-gtm-module": "^2.0.8",
     "react-helmet": "^6.0.0",
+    "react-hot-loader": "^4.13.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-router-redux": "^4.0.8",
