--- a/serverless.yml
+++ b/serverless.yml
@@ -12,15 +12,14 @@ custom:
   serverless-offline:
     port: 3000 
 
+  ##
+  stackName: ${self:service}-${self:provid
+
+  ##
   localDevStaticFolder: dist
 
+  ##
   siteName: devnotnull.com
-
-  ## Webpack 
-  webpack:
-    webpackConfig: './webpack/serverless/index.js'
-    packager: 'yarn' 
-    includeModules: true
 
   ## Retention
   prune:
@@ -35,10 +34,18 @@ custom:
 
   ## S3 bucket for static assets
   s3Sync:
-    - bucketName: fandanzle-assets
+    - bucketName: fandanzle-assets-${self:provider.stage}
       bucketPrefix: static/
       localDir: dist/static
-    
+
+## 
+package:
+  exclude:
+    - .cache/**
+    - .github/**
+    - node_modules/**
+    - src/**
+
 provider:
   name: aws
   runtime: nodejs12.x
@@ -49,7 +56,7 @@ provider:
 
 functions:
   server:
-    handler: src/server/handler.handler
+    handler: dist/serverless.handler
     events:
       - http:
           method: GET
@@ -60,7 +67,7 @@ resources:
     AssetsBucket:
       Type: AWS::S3::Bucket
       Properties:
-        BucketName: fandanzle-assets
+        BucketName: fandanzle-assets-${self:provider.stage}
     BucketPolicy:
       Type: AWS::S3::BucketPolicy
       Properties:
