--- a/serverless.yml
+++ b/serverless.yml
@@ -36,7 +36,7 @@ custom:
   s3Sync:
     - bucketName: fandanzle-assets-${self:provider.stage}
       bucketPrefix: static/
-      localDir: dist/static
+      localDir: build/static
 
 ## 
 package:
