--- a/.eslintrc
+++ b/.eslintrc
@@ -13,6 +13,8 @@
   ],
   "rules": {
     "no-console": 1,
-    "prettier/prettier": 2
+    "prettier/prettier": 2,
+    "@typescript-eslint/no-empty-interface": 1,
+    "@typescript-eslint/triple-slash-reference": 1
   }
 }
