--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "@babel/preset-typescript": "^7.12.7",
     "babel-plugin-graphql-tag": "^2.5.0",
     "process": "0.11.10",
-    "typescript": "^4.1.3",
+    "typescript": "^4.1.0",
     "@babel/cli": "^7.12.1",
     "@babel/core": "^7.12.1",
     "@babel/plugin-transform-runtime": "^7.12.1",
@@ -69,11 +69,7 @@
     "assets-webpack-plugin": "^7.0.0",
     "copy-webpack-plugin": "^7.0.0",
     "webpack": "^5.11.0",
-    "speed-measure-webpack-plugin": "1.3.3",
-    "thread-loader": "^3.0.1",
-    "cache-loader": "^4.1.0",
     "image-webpack-loader": "^7.0.0",
-    "koa-webpack": "^6.0.0",
     "terser-webpack-plugin": "^5.0.3",
     "webpack-bundle-analyzer": "^3.3.2",
     "webpack-cli": "^4.3.1",
@@ -90,21 +86,16 @@
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "enzyme-to-json": "^3.4.0",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.0.0",
-    "eslint-config-prettier": "^6.9.0",
-    "eslint-import-resolver-alias": "^1.1.2",
+    "eslint": "^7.8.10",
+    "eslint-config-prettier": "^7.1.0",
     "eslint-import-resolver-webpack": "^0.12.0",
-    "eslint-plugin-cypress": "^2.8.1",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jest": "^23.0.0",
     "eslint-plugin-jsx-a11y": "^6.2.0",
-    "eslint-plugin-prettier": "^3.1.0",
-    "eslint-plugin-react": "^7.17.0",
+    "eslint-plugin-prettier": "^3.3.0",
+    "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^2.3.0",
     "file-loader": "^3.0.1",
-    "fs": "^0.0.1-security",
-    "got": "^7.1.0",
     "husky": "^3.0.0",
     "identity-obj-proxy": "^3.0.0",
     "ignore-styles": "^5.0.1",
@@ -133,8 +124,6 @@
     "mini-css-extract-plugin": "^1.3.3",
     "postcss-loader": "^4.1.0",
     "buffer": "^6.0.0",
-    "@loadable/babel-plugin": "^5.13.2",
-    "@loadable/webpack-plugin": "^5.14.0",
     "webpack-manifest-plugin": "^3.0.0",
     "circular-dependency-plugin": "^5.2.2",
     "react-hot-loader": "^4.13.0",
@@ -177,10 +166,6 @@
     "aws-sdk": "^2.824.0",
     "cz-customizable": "^6.2.0",
     "fork-ts-checker-webpack-plugin": "^1.3.5",
-    "glob": "^7.1.4",
-    "nodemon": "^1.19.1",
-    "npm-run-all": "^4.1.5",
-    "parallel-webpack": "^2.6.0",
     "postcss-custom-media": "^7.0.8",
     "postcss-flexbugs-fixes": "^4.1.0",
     "postcss-media-variables": "^2.0.1",
@@ -215,31 +200,22 @@
     "extend": "^3.0.1",
     "http-server": "^0.12.3",
     "mockdate": "^2.0.2",
-    "picturefill": "^3.0.2"
+    "picturefill": "^3.0.2",
+    "typed-css-modules": "^0.6.5",
+    "eslint-config-airbnb": "^18.2.0"
   },
   "dependencies": {
     "core-js": "^3.8.2",
     "regenerator-runtime": "^0.13.3",
     "@babel/runtime": "^7.12.5",
     "aws-serverless-express": "^3.4.0",
-    "babel-polyfill": "^6.26.0",
-    "before-build-webpack": "^0.2.9",
     "classnames": "^2.2.6",
     "concurrently": "^5.3.0",
     "connected-react-router": "^6.7.0",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.3",
-    "eslint-config-airbnb": "^18.2.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-prettier": "^3.1.4",
     "express": "^4.16.4",
     "file-loader": "2.0.0",
     "fs-extra": "7.0.0",
-    "husky": "^2.2.0",
-    "isomorphic-fetch": "^2.2.1",
     "moment": "^2.24.0",
-    "nodemon": "^1.18.10",
-    "nodemon-webpack-plugin": "^4.3.1",
     "ramda": "^0.26.1",
     "react": "^16.13.0",
     "react-addons-css-transition-group": "^15.6.2",
@@ -257,8 +233,6 @@
     "redux-saga-requests-graphql": "^0.2.0",
     "reselect": "^4.0.0",
     "resolve": "^1.17.0",
-    "resolve-url-loader": "^3.1.1",
-    "typed-css-modules": "^0.6.5",
     "typesafe-actions": "^5.1.0"
   },
   "browserslist": [
