--- a/ui/package.json
+++ b/ui/package.json
@@ -31,7 +31,12 @@
     "build:style-typings": "node webpack/style-typings.js",
     "lint": "eslint ./src --ext .js --ext .ts --ext .tsx",
     "lint:fix": "eslint ./src --ext .js --ext .ts --ext .tsx --fix",
-    "types": "tcm src"
+    "types": "tcm src",
+    "devserver:pure": "cross-env NODE_ENV=development TARGET=client webpack serve --config webpack.config.js --mode development --inline --hot",
+    "prodserver:pure": "cross-env NODE_ENV=production TARGET=client webpack serve --config webpack.config.js --mode production",
+    "dev:pure": "yarn cleanup && yarn build:style-typings && NODE_ENV=development IS_LOCAL=TRUE NODE_RUNTIME_ENV=local NODE_ENV=development concurrently -r --kill-others \"yarn devserver\" \"webpack --config ./webpack/server/index.js --watch\" \"wait-on ./dist/server.js && node dist/server.js\"",
+    "build:dev:pure": "yarn cleanup && cross-env NODE_ENV=development yarn build:client && TARGET=server webpack",
+    "build:prod:pure": "yarn cleanup && cross-env NODE_ENV=production yarn build:client:prod && TARGET=server webpack --config webpack.config.babel.js --mode production"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.1",
@@ -90,12 +95,12 @@
     "@types/webpack-hot-middleware": "^2.16.5",
     "@typescript-eslint/eslint-plugin": "^3.10.1",
     "@typescript-eslint/parser": "^3.10.1",
-    "babel-loader": "^8.0.6",
     "assets-webpack-plugin": "^7.0.0",
     "autoprefixer": "^7.1.6",
     "aws-sdk": "^2.824.0",
     "babel-eslint": "^10.0.0",
     "babel-jest": "^24.0.0",
+    "babel-loader": "^8.0.6",
     "babel-plugin-graphql-tag": "^2.5.0",
     "babel-plugin-istanbul": "^4.1.6",
     "babel-plugin-module-resolver": "^3.2.0",
@@ -198,6 +203,7 @@
   "dependencies": {
     "@apollo/client": "^3.3.21",
     "@babel/runtime": "^7.12.5",
+    "@types/webpack-merge": "^5.0.0",
     "aws-serverless-express": "^3.4.0",
     "before-build-webpack": "^0.2.11",
     "classnames": "^2.2.6",
