--- a/ui/package.json
+++ b/ui/package.json
@@ -66,9 +66,6 @@
     "@babel/preset-typescript": "^7.12.7",
     "@babel/register": "^7.12.1",
     "@babel/runtime": "^7.12.1",
-    "@commitlint/cli": "^8.0.0",
-    "@commitlint/config-conventional": "^8.0.0",
-    "@hot-loader/react-dom": "^16.12.0",
     "@svgr/webpack": "2.4.1",
     "@types/aws-lambda": "^8.10.46",
     "@types/cheerio": "^0.22.11",
@@ -186,46 +183,45 @@
     "webpack-node-externals": "^1.7.2",
     "webpackbar": "^4.0.0",
     "whybundled": "^1.4.2",
-    "workbox-webpack-plugin": "^6.0.2"
+    "workbox-webpack-plugin": "^6.0.2",
+    "nodemon": "^2.0.7",
+    "before-build-webpack": "^0.2.11",
+    "@types/webpack-merge": "^5.0.0",
+    "postcss-assets": "^5.0.0",
+    "postcss-simple-vars": "^6.0.3",
+    "postcss-url": "^10.1.1",
+    "wait-on": "^6.0.0"
+
   },
   "dependencies": {
     "@apollo/client": "^3.3.21",
     "@babel/runtime": "^7.12.5",
-    "@types/webpack-merge": "^5.0.0",
     "aws-serverless-express": "^3.4.0",
-    "before-build-webpack": "^0.2.11",
     "classnames": "^2.2.6",
-    "concurrently": "^5.3.0",
-    "connected-react-router": "^6.7.0",
     "core-js": "^3.8.2",
     "cross-fetch": "^3.1.4",
     "express": "^4.16.4",
-    "file-loader": "2.0.0",
     "fs-extra": "7.0.0",
     "graphql": "^15.5.0",
     "moment": "^2.24.0",
-    "nodemon": "^2.0.7",
-    "postcss-assets": "^5.0.0",
-    "postcss-simple-vars": "^6.0.3",
-    "postcss-url": "^10.1.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-gtm-module": "^2.0.11",
     "react-helmet": "6.1.0",
     "react-hot-loader": "4.13.0",
     "react-redux": "7.2.6",
-    "react-router-dom": "6.1.1",
+    "connected-react-router": "^6.7.0",
+    "react-router-dom": "5.2.1",
     "react-router-redux": "4.0.8",
     "redux-devtools": "^3.5.0",
-    "redux-devtools-extension": "^2.13.8",
-    "redux-saga": "^1.1.3",
-    "redux-saga-requests": "^0.2.1",
-    "redux-saga-requests-graphql": "^0.2.0",
-    "regenerator-runtime": "^0.13.3",
-    "reselect": "^4.0.0",
-    "resolve": "^1.17.0",
-    "typesafe-actions": "^5.1.0",
-    "wait-on": "^6.0.0"
+    "redux-devtools-extension": "2.13.8",
+    "redux-saga": "1.1.3",
+    "redux-saga-requests": "0.2.1",
+    "redux-saga-requests-graphql": "0.2.0",
+    "regenerator-runtime": "0.13.3",
+    "reselect": "4.0.0",
+    "resolve": "1.17.0",
+    "typesafe-actions": "5.1.0"
   },
   "browserslist": [
     ">0.2%",
