--- a/package.json
+++ b/package.json
@@ -50,28 +50,26 @@
     "prepare": "husky install"
   },
   "devDependencies": {
-    "@babel/cli": "^7.12.1",
-    "@babel/core": "^7.12.1",
-    "@babel/plugin-proposal-class-properties": "^7.12.1",
-    "@babel/plugin-proposal-do-expressions": "^7.12.1",
-    "@babel/plugin-proposal-export-default-from": "^7.12.1",
-    "@babel/plugin-proposal-function-bind": "^7.12.1",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.12.1",
-    "@babel/plugin-proposal-object-rest-spread": "^7.12.1",
-    "@babel/plugin-proposal-optional-chaining": "^7.12.1",
-    "@babel/plugin-proposal-partial-application": "^7.12.1",
-    "@babel/plugin-proposal-pipeline-operator": "^7.12.1",
-    "@babel/plugin-proposal-throw-expressions": "^7.12.1",
+    "@babel/cli": "7.18.6",
+    "@babel/core": "7.18.6",
+    "@babel/plugin-proposal-class-properties": "7.18.6",
+    "@babel/plugin-proposal-do-expressions": "7.18.6",
+    "@babel/plugin-proposal-export-default-from": "7.18.6",
+    "@babel/plugin-proposal-function-bind": "7.18.6",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "7.18.6",
+    "@babel/plugin-proposal-object-rest-spread": "7.18.6",
+    "@babel/plugin-proposal-optional-chaining": "7.18.6",
+    "@babel/plugin-proposal-partial-application": "7.18.6",
+    "@babel/plugin-proposal-pipeline-operator": "7.18.6",
+    "@babel/plugin-proposal-throw-expressions": "7.18.6",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/plugin-transform-react-inline-elements": "^7.12.1",
-    "@babel/plugin-transform-regenerator": "^7.12.1",
-    "@babel/plugin-transform-runtime": "^7.12.1",
-    "@babel/preset-env": "^7.12.1",
-    "@babel/preset-react": "^7.12.1",
-    "@babel/preset-typescript": "^7.12.7",
-    "@babel/register": "^7.12.1",
-    "@babel/runtime": "^7.12.1",
-    "@svgr/webpack": "2.4.1",
+    "@babel/plugin-transform-react-inline-elements": "7.18.6",
+    "@babel/plugin-transform-regenerator": "7.18.6",
+    "@babel/plugin-transform-runtime": "7.18.6",
+    "@babel/preset-env": "7.18.6",
+    "@babel/preset-react": "7.18.6",
+    "@babel/preset-typescript": "7.18.6",
+    "@babel/runtime": "7.18.6",
     "@types/aws-lambda": "^8.10.46",
     "@types/cheerio": "^0.22.11",
     "@types/classnames": "^2.2.8",
@@ -124,7 +122,6 @@
     "file-loader": "^3.0.1",
     "fork-ts-checker-webpack-plugin": "^1.3.5",
     "fs-extra": "7.0.0",
-    "http-server": "^0.12.3",
     "husky": "^8.0.0",
     "identity-obj-proxy": "^3.0.0",
     "ignore-styles": "^5.0.1",
@@ -193,31 +190,28 @@
     "webpack-node-externals": "^1.7.2",
     "webpackbar": "^4.0.0",
     "whybundled": "^1.4.2",
-    "workbox-webpack-plugin": "^6.0.2"
-  },
-  "dependencies": {
-    "@apollo/client": "^3.3.21",
-    "@babel/runtime": "^7.12.5",
+    "workbox-webpack-plugin": "^6.0.2",
     "@considonet/stylelint-config-bem": "^1.0.1",
     "@considonet/stylelint-config-order": "^1.0.1",
     "@considonet/stylelint-config-scss": "^1.0.1",
-    "@lagunovsky/redux-react-router": "^4.0.0",
+    "jest-environment-jsdom": "^29.0.3",
     "@testing-library/react": "^13.4.0",
     "@types/react-syntax-highlighter": "^13.5.2",
+    "resolve": "1.17.0"
+  },
+  "dependencies": {
+    "@babel/runtime": "^7.12.5",
+    "@lagunovsky/redux-react-router": "^4.0.0",
     "aws-serverless-express": "^3.4.0",
     "classnames": "^2.2.6",
-    "connected-react-router": "^6.7.0",
     "core-js": "^3.8.2",
     "express": "4.18.1",
-    "graphql": "^15.5.0",
-    "jest-environment-jsdom": "^29.0.3",
     "moment": "^2.24.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-ga": "^3.3.1",
     "react-gtm-module": "^2.0.11",
     "react-helmet": "6.1.0",
-    "react-hot-loader": "4.13.0",
     "react-intersection-observer": "^9.4.0",
     "react-redux": "8.0.2",
     "react-router-dom": "6.3.0",
@@ -228,7 +222,6 @@
     "redux-saga": "1.2.0",
     "regenerator-runtime": "0.13.3",
     "reselect": "4.0.0",
-    "resolve": "1.17.0",
     "source-map-support": "^0.5.21",
     "typesafe-actions": "5.1.0",
     "web-vitals": "^3.0.1"
