--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "test:types": "tsc --noEmit",
     "hook:before:offline:start": "yarn build:client:prod",
     "build:style-typings": "node webpack/style-typings.js",
-    "lint": "eslint ./src --ext .js --ext .ts --ext .tsx",
-    "lint:fix": "eslint ./src --ext .js --ext .ts --ext .tsx --fix",
+    "lint": "eslint ./src --no-ignore",
+    "lint:fix": "eslint ./src --fix --no-ignore",
     "types": "tcm src",
     "devserver:pure": "cross-env NODE_ENV=development TARGET=client webpack serve --mode development --inline --hot",
     "prodserver:pure": "cross-env NODE_ENV=production TARGET=client webpack serve --mode production",
@@ -48,147 +48,147 @@
     "prepare": "husky install"
   },
   "devDependencies": {
-    "@babel/cli": "^7.22.5",
-    "@babel/core": "^7.22.5",
-    "@babel/plugin-transform-react-inline-elements": "^7.22.5",
-    "@babel/preset-env": "^7.22.5",
-    "@babel/preset-react": "^7.22.5",
-    "@babel/preset-typescript": "^7.22.5",
+    "@babel/cli": "^7.25.7",
+    "@babel/core": "^7.25.8",
+    "@babel/plugin-transform-react-inline-elements": "^7.25.7",
+    "@babel/preset-env": "^7.25.8",
+    "@babel/preset-react": "^7.25.7",
+    "@babel/preset-typescript": "^7.25.7",
     "@babel/runtime": "7.18.6",
-    "@testing-library/react": "^13.4.0",
-    "@types/aws-lambda": "^8.10.46",
+    "@testing-library/jest-dom": "6.5.0",
+    "@testing-library/react": "^16.0.1",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/aws-lambda": "^8.10.145",
     "@types/classnames": "^2.2.8",
-    "@types/express": "^4.17.16",
-    "@types/jest": "^24.0.13",
-    "@types/node": "20.8.6",
-    "@types/react": "^18.0.27",
-    "@types/react-dom": "^18.0.10",
-    "@types/react-helmet": "^6.1.5",
-    "@types/react-syntax-highlighter": "^13.5.2",
-    "@types/serialize-javascript": "^1.5.0",
-    "@types/source-map-support": "^0.5.1",
-    "@types/webpack": "^4.41.7",
-    "@types/webpack-dev-middleware": "^2.0.2",
-    "@types/webpack-env": "^1.13.9",
-    "@types/webpack-hot-middleware": "^2.16.5",
+    "@types/compression": "^1.7.5",
+    "@types/express": "^5.0.0",
+    "@types/jest": "^29.5.13",
+    "@types/node": "22.7.5",
+    "@types/react": "^18.3.11",
+    "@types/react-dom": "^18.3.1",
+    "@types/react-helmet": "^6.1.11",
+    "@types/react-syntax-highlighter": "^15.5.13",
+    "@types/serialize-javascript": "^5.0.4",
+    "@types/source-map-support": "^0.5.10",
+    "@types/webpack": "^5.28.5",
+    "@types/webpack-dev-middleware": "^5.3.0",
+    "@types/webpack-env": "^1.18.5",
+    "@types/webpack-hot-middleware": "^2.25.9",
     "@types/webpack-merge": "^5.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.36.2",
-    "@typescript-eslint/parser": "^5.36.2",
+    "@typescript-eslint/eslint-plugin": "^8.8.1",
+    "@typescript-eslint/parser": "^8.8.1",
     "assets-webpack-plugin": "^7.0.0",
-    "autoprefixer": "^10.4.14",
-    "aws-sdk": "^2.824.0",
+    "autoprefixer": "^10.4.20",
+    "aws-sdk": "^2.1691.0",
     "babel-eslint": "^10.0.0",
-    "babel-jest": "^24.0.0",
-    "babel-loader": "^8.0.6",
-    "babel-plugin-graphql-tag": "^2.5.0",
-    "babel-plugin-istanbul": "^4.1.6",
-    "babel-plugin-module-resolver": "^3.2.0",
+    "babel-jest": "^29.7.0",
+    "babel-loader": "^9.2.1",
+    "babel-plugin-graphql-tag": "^3.3.0",
+    "babel-plugin-istanbul": "^7.0.0",
+    "babel-plugin-module-resolver": "^5.0.2",
     "babel-plugin-root-import": "^6.6.0",
-    "before-build-webpack": "^0.2.11",
+    "before-build-webpack": "^0.2.15",
     "buffer": "^6.0.0",
     "circular-dependency-plugin": "^5.2.2",
-    "concurrently": "^4.1.0",
-    "copy-webpack-plugin": "^7.0.0",
-    "cross-env": "^4.0.0",
-    "cross-fetch": "^3.1.4",
-    "css-loader": "6.8.1",
-    "css-minimizer-webpack-plugin": "^5.0.1",
-    "cz-customizable": "^6.2.0",
+    "concurrently": "^9.0.1",
+    "copy-webpack-plugin": "^12.0.2",
+    "cross-env": "^7.0.3",
+    "cross-fetch": "^4.0.0",
+    "css-loader": "7.1.2",
+    "css-minimizer-webpack-plugin": "^7.0.0",
+    "cz-customizable": "^7.2.1",
     "duplicate-package-checker-webpack-plugin": "^3.0.0",
-    "esbuild-loader": "^3.0.1",
-    "eslint": "^8.52.0",
+    "esbuild-loader": "^4.2.2",
+    "eslint": "^9.12.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.1",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "extend": "^3.0.1",
-    "file-loader": "^3.0.1",
-    "fork-ts-checker-webpack-plugin": "^1.3.5",
-    "fs-extra": "7.0.0",
+    "file-loader": "^6.2.0",
+    "fork-ts-checker-webpack-plugin": "^9.0.2",
+    "fs-extra": "11.2.0",
     "http-server": "^14.1.1",
     "https-browserify": "^1.0.0",
-    "husky": "^8.0.0",
+    "husky": "^9.1.6",
     "isomorphic-style-loader": "^5.1.0",
     "jest": "^29.0.3",
     "jest-environment-jsdom": "^29.7.0",
-    "lint-staged": "^13.2.2",
-    "mini-css-extract-plugin": "^1.3.3",
-    "nodemon": "^2.0.7",
+    "lint-staged": "^15.2.10",
+    "mini-css-extract-plugin": "^2.9.1",
+    "nodemon": "^3.1.7",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
-    "postcss": "^8.4.25",
-    "postcss-assets": "^5.0.0",
-    "postcss-custom-media": "^7.0.8",
-    "postcss-flexbugs-fixes": "^4.1.0",
-    "postcss-loader": "^7.3.3",
+    "postcss": "^8.4.47",
+    "postcss-assets": "^6.0.0",
+    "postcss-custom-media": "^11.0.3",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-loader": "^8.1.1",
     "postcss-media-variables": "^2.0.1",
-    "postcss-preset-env": "^9.0.0",
-    "postcss-simple-vars": "^6.0.3",
+    "postcss-preset-env": "^10.0.7",
+    "postcss-simple-vars": "^7.0.1",
     "postcss-url": "^10.1.1",
-    "prettier": "^3.0.3",
+    "prettier": "^3.3.3",
     "process": "0.11.10",
     "redux-devtools-extension": "^2.13.0",
     "resolve": "^1.22.2",
-    "resolve-url-loader": "^3.1.2",
-    "rimraf": "^2.6.2",
-    "serverless": "^3.33.0",
+    "resolve-url-loader": "^5.0.0",
+    "rimraf": "^6.0.1",
+    "serverless": "^4.4.5",
     "serverless-deployment-bucket": "1.6.0",
-    "serverless-offline": "12.0.4",
-    "serverless-prune-plugin": "^1.4.3",
-    "serverless-s3-local": "^0.7.2",
-    "serverless-s3-sync": "^1.15.0",
+    "serverless-offline": "14.3.2",
+    "serverless-prune-plugin": "^2.0.2",
+    "serverless-s3-local": "^0.8.5",
+    "serverless-s3-sync": "^3.3.0",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
-    "style-loader": "^2.0.0",
-    "terser-webpack-plugin": "^5.0.3",
-    "ts-jest": "^29.0.1",
+    "style-loader": "^4.0.0",
+    "terser-webpack-plugin": "^5.3.10",
+    "ts-jest": "^29.2.5",
     "tsconfig-paths-webpack-plugin": "^4.0.1",
-    "typed-css-modules": "^0.7.2",
-    "typescript": "5.1.6",
+    "typed-css-modules": "^0.9.1",
+    "typescript": "5.6.3",
     "url-loader": "^4.1.1",
-    "wait-on": "^6.0.0",
-    "webpack": "^5.76.0",
-    "webpack-cli": "^4.3.1",
-    "webpack-dev-middleware": "^4.0.2",
-    "webpack-dev-server": "^3.11.1",
-    "webpack-manifest-plugin": "^3.0.0",
-    "webpack-merge": "^4.2.1",
-    "webpackbar": "^4.0.0",
-    "yarn-upgrade-minor": "^1.0.13",
-    "@testing-library/jest-dom": "6.1.4",
-    "@testing-library/user-event": "^14.5.1",
-    "@types/compression": "^1.7.5"
+    "wait-on": "^8.0.1",
+    "webpack": "^5.95.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-middleware": "^7.4.2",
+    "webpack-dev-server": "^5.1.0",
+    "webpack-manifest-plugin": "^5.0.0",
+    "webpack-merge": "^6.0.1",
+    "webpackbar": "^6.0.1",
+    "yarn-upgrade-minor": "^1.0.13"
   },
   "dependencies": {
-    "@babel/register": "^7.18.9",
-    "@babel/runtime": "^7.12.5",
-    "@headlessui/react": "^1.7.17",
-    "@heroicons/react": "^2.0.18",
-    "@sentry/node": "^7.54.0",
-    "@sentry/react": "^7.54.0",
-    "@sentry/tracing": "^7.54.0",
-    "@typeform/embed-react": "^2.24.0",
-    "classnames": "^2.2.6",
-    "clsx": "^2.0.0",
+    "@babel/register": "^7.25.7",
+    "@babel/runtime": "^7.25.7",
+    "@headlessui/react": "^2.1.10",
+    "@heroicons/react": "^2.1.5",
+    "@sentry/node": "^8.34.0",
+    "@sentry/react": "^8.34.0",
+    "@sentry/tracing": "^7.114.0",
+    "@typeform/embed-react": "^4.1.0",
+    "classnames": "^2.5.1",
+    "clsx": "^2.1.1",
     "compression": "^1.7.4",
-    "core-js": "^3.8.2",
-    "date-fns": "^2.30.0",
-    "express": "^4.18.2",
-    "i18next": "^23.6.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "core-js": "^3.38.1",
+    "date-fns": "^4.1.0",
+    "express": "^4.21.1",
+    "i18next": "^23.15.2",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-ga": "^3.3.1",
     "react-ga4": "^2.1.0",
     "react-helmet": "6.1.0",
-    "react-helmet-async": "^2.0.4",
-    "react-i18next": "^13.3.1",
-    "react-intersection-observer": "^9.4.0",
-    "react-router-dom": "^6.14.0",
+    "react-helmet-async": "^2.0.5",
+    "react-i18next": "^15.0.2",
+    "react-intersection-observer": "^9.13.1",
+    "react-router-dom": "^6.27.0",
     "react-syntax-highlighter": "^15.5.0",
-    "regenerator-runtime": "^0.13.11",
+    "regenerator-runtime": "^0.14.1",
     "source-map-support": "^0.5.21",
-    "tailwindcss": "^3.3.2",
-    "tailwindcss-animated": "^1.0.1",
-    "web-vitals": "^3.0.1",
+    "tailwindcss": "^3.4.13",
+    "tailwindcss-animated": "^1.1.2",
+    "web-vitals": "^4.2.3",
     "zod": "^3.23.8"
   }
 }
